// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsElement render should pass createOptions object if it's add prop is true 1`] = `
<FormElement
  errors={Array []}
  name="Groups"
>
  <SelectSearch
    _className=""
    createNewOption={[Function]}
    createPrompt="New group: "
    initial={Array []}
    isValidNewOption={[Function]}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group name"
    url="/assets/groups.json"
  />
</FormElement>
`;

exports[`GroupsElement render should render self, children with required props 1`] = `
<FormElement
  errors={Array []}
  name="Groups"
>
  <SelectSearch
    _className=""
    initial={Array []}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group name"
    url="/assets/groups.json"
  />
</FormElement>
`;
